--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   flutter_svg: ^2.0.9
   # for creating carousel slider
   carousel_slider:
+  # automatically resizes text
+  auto_size_text: ^3.0.0
+  # for launching a URL
+  url_launcher: ^6.1.11
+
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
