--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,8 +28,10 @@ if (flutterVersionName == null) {
 }
 
 android {
+
+     
     namespace = "com.somrat.tophealthpharma"
-    compileSdk = flutter.compileSdkVersion
+    compileSdkVersion 34 
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -42,8 +44,8 @@ android {
         applicationId = "com.somrat.tophealthpharma"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdkVersion 21  // minimum supported SDK
+        targetSdkVersion 33 
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
